--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3101,6 +3101,10 @@
 		padding: 10em 0 4.75em 0 ;
 	}
 
+		#banner .main {
+			background-image: url("../../images/banner.JPG");
+		}
+
 		#banner .inner {
 			margin: 0 auto;
 			width: 55em;
