--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3104,6 +3104,8 @@
 		#banner .inner {
 			margin: 0 auto;
 			width: 55em;
+			margin-top: 100px;
+			background: rgba(0,0,0,0.4);
 		}
 
 		#banner .logo {
